<resources>
    <string name="app_name" translatable="false">KabuApp</string>
    <string name="login_title">Login</string>
    <string name="login_username">Username</string>
    <string name="login_password">Password</string>
    <string name="login_loginButton">Login</string>


    <string name="title_activity_settings">Settings</string>
    <string name="settings">settings</string>
    <string name="schedule_title">Schedule</string>
    <string name="lesson_room_prefix">Room</string>
    <string name="lesson_teacher_prefix">Teacher</string>
    <string name="login_wrong">Wrong username or password</string>
    <string name="settings_logout">Logout</string>
    <string name="settings_debugInformation">Debug information</string>
    <string name="notice_warrenty">We don\'t provide any warranty on this programm.</string>
    <string name="notice_code">"The code and licence is on "</string>
    <string name="github_link" translatable="false">https://github.com/Random-user420/kabuApp/tree/master</string>
    <string name="github_text" translatable="false">GitHub</string>
    <string name="exam_title">Exams</string>
    <string name="settings_account_management_header">Manage accounts</string>
    <string name="settings_add_account">add account</string>
    <string name="settings_delete_account">delete account</string>
    <string name="login_back">Back</string>
    <string name="noSchoolHint">You don\'t have school in this or the next week</string>
    <string name="settings_isoDate">use ISO date format on exams</string>
    <string name="settings_notfication_next_day_exam">Nofification for Eventw at next day</string>
    <string name="nofification_exam_next_day_title">Event tomorrow</string>
</resources>